accept jdk11 stacktrace to fix IDEA-246443 Reappearance of ThreadTracker fails to detect idle ForkJoin common pool threads on Java 11
GitOrigin-RevId: a2d8e457214874b5448e8e7451b157195883a637