@@ -248,11 +248,12 @@ public final class ThreadTracker {
     // at java.base@11.0.6/java.util.concurrent.locks.LockSupport.park(LockSupport.java:194)
     // at java.base@11.0.6/java.util.concurrent.ForkJoinPool.runWorker(ForkJoinPool.java:1628)
     // at java.base@11.0.6/java.util.concurrent.ForkJoinWorkerThread.run(ForkJoinWorkerThread.java:177)
-    boolean isWaitingWorkInJdk11 = stackTrace.length > 2
-          && stackTrace[0].getClassName().equals("sun.misc.Unsafe") && stackTrace[0].getMethodName().equals("park")
+    boolean isWaitingWorkInJdk = stackTrace.length > 2
+          // can be both sun.misc.Unsafe and jdk.internal.misc.Unsafe on depending on the jdk
+          && stackTrace[0].getClassName().endsWith(".Unsafe") && stackTrace[0].getMethodName().equals("park")
           && stackTrace[1].getClassName().equals("java.util.concurrent.locks.LockSupport") && stackTrace[1].getMethodName().equals("park")
           && stackTrace[2].getClassName().equals("java.util.concurrent.ForkJoinPool") && stackTrace[2].getMethodName().equals("runWorker");
-    return isWaitingWorkInJdk11;
+    return isWaitingWorkInJdk;
   }
 
   // in newer JDKs strange long hangups observed in Unsafe.unpark:
